[package]
name = "benchmark_test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[lib]
name = "mylib"
path = "src/lib.rs"

[[bench]]
name = "benchmark"
harness = false

[profile.bench]
opt-level = 3
